# simple-home-dir

./: Cargo.toml  README.md
src/: lib.rs
