[package]
name = "simple-home-dir"
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/simple-home-dir"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Returns the path of the current user's home directory if known."
keywords = ["home", "directory", "home_dir"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
